# gw_utils

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml
bobcat/: __init__.py
bobcat/ingest/: __init__.py  create_url.py  ingest.py  ingest_model.py  ingest_source.py  ingest_trial_db_info.txt
bobcat/ingest/survey_ingests/: SDSS_dualAGN_survey.csv  SDSS_dualAGN_survey.py  SDSS_dualAGN_survey.txt  objsearch_div.csv  objsearch_div.tbl
bobcat/utils/: __init__.py  ned.py  plot.py
bobcat/utils/calc/: coordinates.py  cosmo.py  frequency.py  mass.py
bobcat/utils/ned/: name.py
bobcat/utils/plot/ryan_plotting_code_UPDATE/: 11yr_ul_bestskyloc.txt  11yr_ul_skyavg.txt  5yr_ul_skyavg.txt  9yr_ul_skyavg.txt  Log-Log Plots.ipynb  PPTAdr1_hsensitivity.txt  PPTAdr2_hsensitivity.txt  updated_candidates.csv
bobcat/utils/plot/skymap_functions/: 11yr_skymap_v4.txt  data_querier.py  skymap_generator.py  (+2 more)
gw_utils/: __init__.py  astrodb.py  calc.py  ned.py  plot.py
gw_utils/legacy_code/: ingest.py  old_models.py
gw_utils/legacy_code/BOBcat_utils/: CandidateCoordTester.csv  Mc_calculator.py  Mtot_calculator.py  NED_name.py  NED_name_resolver.py  NED_redshift.py  __init__.py  coordinate_converter.py  coordinate_finder.py  cosmology_calculator_simple.py  dec_dms2deg.py  find_m1_m2.py  frequency_calculator.py  mass_value_calculator.py  mu_calculator.py  q_calculator.py  ra_hms2deg.py  strain_calculator.py  update_Mc.py  update_Mtot.py  update_all_masses.py  update_m1.py  update_m2.py  update_mu.py  update_orbital_Tfreq.py  update_q.py
tests/: test_bobcat_utils.py  test_ingestion.py
